[package]
name = "ruast"
version = "0.0.5"
edition = "2021"
description = "A printable & modifiable Rust AST"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["parsing", "ast"]
repository = "https://github.com/mtshiba/ruast"
homepage = "https://docs.rs/ruast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokenize = ["dep:proc-macro2", "dep:quote"]

[dependencies]
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
