[package]
name = "ruast"
version = "0.0.14"
edition = "2021"
description = "A printable & modifiable Rust AST"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["parsing"]
repository = "https://github.com/mtshiba/ruast"
homepage = "https://docs.rs/ruast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/proc_macro_example"]

[features]
tokenize = ["dep:proc-macro2", "dep:quote"]

[dependencies]
indenter = { version = "0.3.3", features = ["std"] }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }

[dev-dependencies]
insta = "1.40.0"

[profile.dev.package]
insta.opt-level = 3
