[package]
name = "ruast"
version = "0.0.23"
edition = "2021"
description = "A printable & modifiable Rust AST"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["parsing"]
keywords = ["ast", "rust", "syntax", "proc-macro", "code-generation"]
repository = "https://github.com/mtshiba/ruast"
homepage = "https://docs.rs/ruast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/proc_macro_example", "fuzz"]

[features]
tokenize = ["dep:proc-macro2", "dep:quote"]
checked-ident = ["dep:unicode-ident"]
fuzzing = ["dep:arbitrary"]

[dependencies]
indenter = { version = "0.3.3", features = ["std"] }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
unicode-ident = { version = "1.0", optional = true }
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1.40.0"
syn = { version = "2", features = ["full"] }

[profile.dev.package]
insta.opt-level = 3
